# attested-ohttp-server

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile
.github/workflows/: check.yml
azure-attestation-proxy/: Cargo.toml  README.md  azure-attestation-proxy.service  install.sh  libazguestattestation.so.1.0.5
azure-attestation-proxy/src/: lib.rs  main.rs  tests.rs
cgpuvm-attest/: Cargo.toml
cgpuvm-attest/src/: err.rs  lib.rs
cvm-attest/: Cargo.toml
cvm-attest/src/: lib.rs
cvm-attestation-service/: Dockerfile  README.md  cvm-attestation.service  install.sh
cvm-attestation-service/cvm-attestation/: Cargo.toml
cvm-attestation-service/cvm-attestation/src/: lib.rs  main.rs  tests.rs
docker/: docker-compose-faster-whisper.yml  docker-compose-server-cgpu.yml  docker-compose-server.yml  docker-compose-whisper.yml
docker/attestation-proxy-builder/: Dockerfile
docker/server/: Dockerfile  run.sh
docker/whisper/: app.py
ohttp-server/: Cargo.toml  libazguestattestation.so.1.0.5
ohttp-server/src/: attest.rs  cache.rs  err.rs  lib.rs  main.rs  tests.rs  utils.rs
ohttp-server/tests/: tests.rs
scripts/: service_wait.sh
