[package]
name = "cgpuvm-attest"
version = "0.1.0"
authors = ["Antoine Delignat-Lavaud <antdl@microsoft.com>"]
edition = "2021"
license = "MIT"
description = "FFI for Confidential GPU VM Guest Attestation Library"
repository = "https://github.com/ad-l/ohttp"

[features]
default = []

[dependencies]
libc = "0.2.0"
tracing = "0.1"
thiserror = "1"

[dependencies.ohttp]
git = "https://github.com/microsoft/ohttp.git"
branch = "main"
features = ["server"]
default-features = false