[package]
name = "cgpuvm-attest"
version = "0.1.0"
authors = ["Antoine Delignat-Lavaud <antdl@microsoft.com>"]
edition = "2024"
license = "MIT"
description = "FFI for Confidential GPU VM Guest Attestation Library"
repository = "https://github.com/ad-l/cvm-guest-attestation"

[features]
default = []

[dependencies]
libc = "0.2.0"
tracing = "0.1"
thiserror = "2.0.12"