[package]
name = "ohttp-server"
version = "0.1.0"
authors = ["Kapil Vaswani <kapilv@microsoft.com>"]
edition = "2021"

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
env_logger = {version = "0.10", default-features = false}
hex = "0.4"
lazy_static = "1.4"
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
elliptic-curve = { version = "0.13.8", features = ["jwk"] }
base64-url = "3.0.0"
hpke = {version = "0.12.0", features = ["std","p384"]}
serde_json = "1.0"
serde_cbor = "0.10"
warp = { version = "0.3", features = ["tls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3.30"
futures = "0.3.30"
log = "0.4.22"
clap = { version = "4.5.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["default", "json", "env-filter"] }
thiserror = "1"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.cgpuvm-attest]
path= "../cgpuvm-attest"
features = []

[dependencies.bhttp]
git = "https://github.com/microsoft/ohttp.git"
branch = "main"
features = ["bhttp", "write-http"]

[dependencies.ohttp]
git = "https://github.com/microsoft/ohttp.git"
branch = "main"
features = ["server"]
default-features = false

